// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test update pane render with element 1`] = `
.c12 {
  height: 1em;
  vertical-align: middle;
  width: 1em;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  outline: none;
  overflow: visible;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  fill: white;
}

.c3 {
  background: var(--apollon-background);
  color: var(--apollon-primary-contrast);
  border: 1px solid var(--apollon-gray);
  margin: 0;
  outline: none;
  border-radius: 0.25rem;
  width: 2.25em;
  height: 2.25em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3:hover {
  background-color: var(--apollon-gray);
  border-color: var(--apollon-gray-variant);
}

.c3:active {
  background-color: var(--apollon-gray);
  border-color: var(--apollon-gray-variant);
}

.c1 {
  display: block;
  overflow: auto;
  position: relative;
  min-height: inherit;
  max-height: inherit;
  width: 100%;
  height: 100%;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border: 1px solid var(--apollon-gray,#e9ecef);
  background-position: calc(50% + 24.5px) calc(50% + 24.5px);
  background-size: 50px 50px, 50px 50px, 10px 10px, 10px 10px;
  background-image: linear-gradient(to right,var(--apollon-grid,rgba(36,39,36,0.1)) 1px,transparent 1px), linear-gradient(to bottom,var(--apollon-grid,rgba(36,39,36,0.1)) 1px,transparent 1px), linear-gradient(to right,var(--apollon-gray,#e9ecef) 1px,transparent 1px), linear-gradient(to bottom,var(--apollon-gray,#e9ecef) 1px,transparent 1px);
  background-repeat: repeat;
  background-attachment: local;
  -webkit-transition: -webkit-transform 500ms, width 500ms, height 500ms;
  -webkit-transition: transform 500ms, width 500ms, height 500ms;
  transition: transform 500ms, width 500ms, height 500ms;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c10 {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25em;
  font-family: inherit;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  overflow: visible;
  padding: 0.375em 0.75em;
  text-transform: none;
  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 svg {
  pointer-events: none;
}

.c10::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:focus {
  outline: 0;
}

.c10:not(:disabled) {
  cursor: pointer;
}

.c11 {
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
  color: var(--apollon-primary,#2a8fbd);
  -webkit-text-decoration: none;
  text-decoration: none;
  fill: var(--apollon-primary-contrast,#212529);
}

.c15 {
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
  border-color: var(--apollon-primary,#2a8fbd);
  color: var(--apollon-primary,#2a8fbd);
}

.c15:focus {
  box-shadow: 0 0 0 0.2em var(--apollon-primary,#2a8fbd)80;
}

.c15:hover {
  background-color: var(--apollon-primary,#2a8fbd);
  color: var(--apollon-background,#ffffff);
}

.c8 {
  background-clip: padding-box;
  background-color: var(--apollon-background,#ffffff);
  border: 1px solid var(--apollon-gray-variant,#343a40);
  border-radius: 0.25em;
  color: var(--apollon-gray-variant,#343a40);
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  overflow: visible;
  padding: 0.375em 0.75em;
  -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.c8:focus {
  border-color: #404040;
  outline: 0;
  box-shadow: 0 0 0 0.2em var(--apollon-primary,#2a8fbd)40;
}

.c8::-webkit-input-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c8::-moz-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c8::placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c9 {
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
}

.c19 {
  margin-bottom: 0.5em;
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
}

.c20 {
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
}

.c20:not(:focus) {
  border-style: dashed;
}

.c20:not(:focus):not(:hover) {
  background: var(--apollon-background,#ffffff);
  opacity: 0.5;
}

.c17 {
  margin-top: 0;
  font-size: 1.25em;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: 0.5em;
}

.c13 {
  border: 0;
  border-top: 1px solid var(--apollon-primary-contrast,#212529);
  box-sizing: content-box;
  height: 0;
  margin-top: 0.75em;
  margin-bottom: 0.75em;
  overflow: visible;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 1.9rem;
}

.c16 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16:not(:first-child) {
  margin-left: -1px;
}

.c16:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c16:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c16:not(:first-child):not(:last-child) {
  border-radius: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  background-clip: padding-box;
  background-color: var(--apollon-background-variant,#e5e5e5);
  border: 1px solid var(--apollon-primary-contrast,#212529)33;
  border-radius: 0.3em;
  box-sizing: border-box;
  display: block;
  -webkit-filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2));
  filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2));
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  left: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-break: auto;
  line-height: 1.5;
  max-width: 276px;
  position: absolute;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-shadow: none;
  top: 0;
  will-change: transform;
  white-space: normal;
  word-break: normal;
  word-spacing: normal;
  word-wrap: break-word;
  -webkit-transform: translate(calc(0px - 100% - 0.5em),calc(100px - 100%));
  -ms-transform: translate(calc(0px - 100% - 0.5em),calc(100px - 100%));
  transform: translate(calc(0px - 100% - 0.5em),calc(100px - 100%));
}

.c4 *,
.c4 *:before,
.c4 *:after {
  box-sizing: inherit;
}

.c6 {
  color: var(--apollon-primary-contrast,#212529);
  padding: 0.5em 0.75em;
  max-height: 500px;
  overflow: auto;
}

.c5 {
  display: block;
  height: 0.5em;
  position: absolute;
  width: 1em;
  height: 1em;
  right: calc((0.5em + 1px) * -1);
  width: 0.5em;
  bottom: 0.3em;
}

.c5::before,
.c5::after {
  content: '';
  border-color: transparent;
  border-style: solid;
  display: block;
  position: absolute;
}

.c5::before {
  border-left-color: var(--apollon-primary-contrast,#212529)33;
  border-width: 0.5em 0 0.5em 0.5em;
  right: 0;
}

.c5::after {
  border-left-color: var(--apollon-gray,#e9ecef);
  border-width: 0.5em 0 0.5em 0.5em;
  right: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  min-width: inherit;
  min-height: inherit;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  touch-action: none;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 16px;
  color: var(--apollon-primary-contrast,#212529);
  font-weight: 400;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: inherit;
}

.c0 svg text {
  fill: var(--apollon-primary-contrast,#212529);
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  font-size: 16px;
}

.c0 svg marker,
.c0 svg text {
  fill-opacity: 1;
}

.c0 svg * {
  overflow: visible;
}

<body>
  <div>
    <div
      class="c0 apollon-editor"
    >
      <div
        style="width: 100%; overflow: hidden;"
      >
        <div
          class="c1"
          scale="1"
        >
          <svg
            class="c2"
            data-cy="modeling-editor-canvas"
            height="640"
            id="modeling-editor-canvas"
            tabindex="-1"
            width="840"
          >
            <g
              style="transform-origin: top left; transform: translate(0px,0px);"
            />
          </svg>
        </div>
        <div
          style="display: flex; flex-direction: column; position: absolute; right: 0.75em; bottom: 0.75em;"
        >
          <button
            class="c3"
            style="margin-bottom: 0.5em;"
          >
            +
          </button>
          <button
            class="c3"
          >
            -
          </button>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class="c6"
        >
          <div>
            <section>
              <div
                class="c7"
              >
                <input
                  class="c8 c9"
                  maxlength="100"
                  value=""
                />
                <button
                  class="c10 c11"
                  color="link"
                  tabindex="-1"
                >
                  <svg
                    class="c12"
                    height="16px"
                    viewBox="0 0 448 512"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440 64H336l-33.6-44.8A48 48 0 0 0 264 0h-80a48 48 0 0 0-38.4 19.2L112 64H8a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h18.9l33.2 372.3a48 48 0 0 0 47.8 43.7h232.2a48 48 0 0 0 47.8-43.7L421.1 96H440a8 8 0 0 0 8-8V72a8 8 0 0 0-8-8zM171.2 38.4A16.1 16.1 0 0 1 184 32h80a16.1 16.1 0 0 1 12.8 6.4L296 64H152zm184.8 427a15.91 15.91 0 0 1-15.9 14.6H107.9A15.91 15.91 0 0 1 92 465.4L59 96h330z"
                    />
                  </svg>
                </button>
              </div>
              <hr
                class="c13"
              />
            </section>
            <section>
              <div
                class="c14"
              >
                <button
                  class="c10 c15 c16"
                  color="primary"
                >
                  Abstract
                </button>
                <button
                  class="c10 c15 c16"
                  color="primary"
                >
                  Interface
                </button>
                <button
                  class="c10 c15 c16"
                  color="primary"
                >
                  Enumeration
                </button>
              </div>
              <hr
                class="c13"
              />
            </section>
            <section>
              <h1
                class="c17"
              >
                Attributes
              </h1>
              <div
                class="c18"
              >
                <input
                  class="c8 c19"
                  maxlength="100"
                  value=""
                />
                <button
                  class="c10 c11"
                  color="link"
                  tabindex="-1"
                >
                  <svg
                    class="c12"
                    height="16px"
                    viewBox="0 0 448 512"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440 64H336l-33.6-44.8A48 48 0 0 0 264 0h-80a48 48 0 0 0-38.4 19.2L112 64H8a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h18.9l33.2 372.3a48 48 0 0 0 47.8 43.7h232.2a48 48 0 0 0 47.8-43.7L421.1 96H440a8 8 0 0 0 8-8V72a8 8 0 0 0-8-8zM171.2 38.4A16.1 16.1 0 0 1 184 32h80a16.1 16.1 0 0 1 12.8 6.4L296 64H152zm184.8 427a15.91 15.91 0 0 1-15.9 14.6H107.9A15.91 15.91 0 0 1 92 465.4L59 96h330z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="c8 c20"
                maxlength="100"
                value=""
              />
            </section>
            <section>
              <hr
                class="c13"
              />
              <h1
                class="c17"
              >
                Methods
              </h1>
              <div
                class="c18"
              >
                <input
                  class="c8 c19"
                  maxlength="100"
                  value=""
                />
                <button
                  class="c10 c11"
                  color="link"
                  tabindex="-1"
                >
                  <svg
                    class="c12"
                    height="16px"
                    viewBox="0 0 448 512"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440 64H336l-33.6-44.8A48 48 0 0 0 264 0h-80a48 48 0 0 0-38.4 19.2L112 64H8a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h18.9l33.2 372.3a48 48 0 0 0 47.8 43.7h232.2a48 48 0 0 0 47.8-43.7L421.1 96H440a8 8 0 0 0 8-8V72a8 8 0 0 0-8-8zM171.2 38.4A16.1 16.1 0 0 1 184 32h80a16.1 16.1 0 0 1 12.8 6.4L296 64H152zm184.8 427a15.91 15.91 0 0 1-15.9 14.6H107.9A15.91 15.91 0 0 1 92 465.4L59 96h330z"
                    />
                  </svg>
                </button>
              </div>
              <input
                class="c8 c20"
                maxlength="100"
                value=""
              />
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test update pane render with relationship 1`] = `
.c11 {
  height: 1em;
  vertical-align: middle;
  width: 1em;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  outline: none;
  overflow: visible;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  fill: white;
}

.c3 {
  background: var(--apollon-background);
  color: var(--apollon-primary-contrast);
  border: 1px solid var(--apollon-gray);
  margin: 0;
  outline: none;
  border-radius: 0.25rem;
  width: 2.25em;
  height: 2.25em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3:hover {
  background-color: var(--apollon-gray);
  border-color: var(--apollon-gray-variant);
}

.c3:active {
  background-color: var(--apollon-gray);
  border-color: var(--apollon-gray-variant);
}

.c1 {
  display: block;
  overflow: auto;
  position: relative;
  min-height: inherit;
  max-height: inherit;
  width: 100%;
  height: 100%;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border: 1px solid var(--apollon-gray,#e9ecef);
  background-position: calc(50% + 24.5px) calc(50% + 24.5px);
  background-size: 50px 50px, 50px 50px, 10px 10px, 10px 10px;
  background-image: linear-gradient(to right,var(--apollon-grid,rgba(36,39,36,0.1)) 1px,transparent 1px), linear-gradient(to bottom,var(--apollon-grid,rgba(36,39,36,0.1)) 1px,transparent 1px), linear-gradient(to right,var(--apollon-gray,#e9ecef) 1px,transparent 1px), linear-gradient(to bottom,var(--apollon-gray,#e9ecef) 1px,transparent 1px);
  background-repeat: repeat;
  background-attachment: local;
  -webkit-transition: -webkit-transform 500ms, width 500ms, height 500ms;
  -webkit-transition: transform 500ms, width 500ms, height 500ms;
  transition: transform 500ms, width 500ms, height 500ms;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c9 {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25em;
  font-family: inherit;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  overflow: visible;
  padding: 0.375em 0.75em;
  text-transform: none;
  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9 svg {
  pointer-events: none;
}

.c9::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:focus {
  outline: 0;
}

.c9:not(:disabled) {
  cursor: pointer;
}

.c10 {
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
  color: var(--apollon-primary,#2a8fbd);
  -webkit-text-decoration: none;
  text-decoration: none;
  fill: var(--apollon-primary-contrast,#212529);
}

.c13 {
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
  border-color: var(--apollon-primary,#2a8fbd);
  color: var(--apollon-primary,#2a8fbd);
}

.c13:focus {
  box-shadow: 0 0 0 0.2em var(--apollon-primary,#2a8fbd)80;
}

.c13:hover {
  background-color: var(--apollon-primary,#2a8fbd);
  color: var(--apollon-background,#ffffff);
}

.c17 {
  background-clip: padding-box;
  background-color: var(--apollon-background,#ffffff);
  border: 1px solid var(--apollon-gray-variant,#343a40);
  border-radius: 0.25em;
  color: var(--apollon-gray-variant,#343a40);
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  overflow: visible;
  padding: 0.375em 0.75em;
  -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.c17:focus {
  border-color: #404040;
  outline: 0;
  box-shadow: 0 0 0 0.2em var(--apollon-primary,#2a8fbd)40;
}

.c17::-webkit-input-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c17::-moz-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c17:-ms-input-placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c17::placeholder {
  color: var(--apollon-gray-variant,#343a40);
  opacity: 1;
}

.c18 {
  margin-bottom: 0.5em;
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
}

.c19 {
  display: block;
  width: 100%;
  border-radius: 0.2em;
  font-size: 0.875em;
  padding: 0.25em 0.5em;
}

.c8 {
  margin-top: 0;
  font-size: 1.25em;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: 0.5em;
  margin-bottom: 0;
}

.c15 {
  margin-top: 0;
  font-size: 1.25em;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: 0.5em;
}

.c16 {
  margin-top: 0;
  margin-bottom: 1em;
  margin-bottom: 0;
}

.c12 {
  border: 0;
  border-top: 1px solid var(--apollon-primary-contrast,#212529);
  box-sizing: content-box;
  height: 0;
  margin-top: 0.75em;
  margin-bottom: 0.75em;
  overflow: visible;
}

.c14::after {
  border-top: 0.3em solid;
  border-right: 0.3em solid transparent;
  border-bottom: 0;
  border-left: 0.3em solid transparent;
  content: '';
  display: inline-block;
  height: 0;
  margin-left: 0.255em;
  vertical-align: 0.255em;
  width: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  background-clip: padding-box;
  background-color: var(--apollon-background-variant,#e5e5e5);
  border: 1px solid var(--apollon-primary-contrast,#212529)33;
  border-radius: 0.3em;
  box-sizing: border-box;
  display: block;
  -webkit-filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2));
  filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2));
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  left: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-break: auto;
  line-height: 1.5;
  max-width: 276px;
  position: absolute;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-shadow: none;
  top: 0;
  will-change: transform;
  white-space: normal;
  word-break: normal;
  word-spacing: normal;
  word-wrap: break-word;
  -webkit-transform: translate(calc(100px - 100% - 0.5em),calc(65px - 100%));
  -ms-transform: translate(calc(100px - 100% - 0.5em),calc(65px - 100%));
  transform: translate(calc(100px - 100% - 0.5em),calc(65px - 100%));
}

.c4 *,
.c4 *:before,
.c4 *:after {
  box-sizing: inherit;
}

.c6 {
  color: var(--apollon-primary-contrast,#212529);
  padding: 0.5em 0.75em;
  max-height: 500px;
  overflow: auto;
}

.c5 {
  display: block;
  height: 0.5em;
  position: absolute;
  width: 1em;
  height: 1em;
  right: calc((0.5em + 1px) * -1);
  width: 0.5em;
  bottom: 0.3em;
}

.c5::before,
.c5::after {
  content: '';
  border-color: transparent;
  border-style: solid;
  display: block;
  position: absolute;
}

.c5::before {
  border-left-color: var(--apollon-primary-contrast,#212529)33;
  border-width: 0.5em 0 0.5em 0.5em;
  right: 0;
}

.c5::after {
  border-left-color: var(--apollon-gray,#e9ecef);
  border-width: 0.5em 0 0.5em 0.5em;
  right: 1px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  min-width: inherit;
  min-height: inherit;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  touch-action: none;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif,sans-serif;
  font-size: 16px;
  color: var(--apollon-primary-contrast,#212529);
  font-weight: 400;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: inherit;
}

.c0 svg text {
  fill: var(--apollon-primary-contrast,#212529);
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
  font-size: 16px;
}

.c0 svg marker,
.c0 svg text {
  fill-opacity: 1;
}

.c0 svg * {
  overflow: visible;
}

<body>
  <div>
    <div
      class="c0 apollon-editor"
    >
      <div
        style="width: 100%; overflow: hidden;"
      >
        <div
          class="c1"
          scale="1"
        >
          <svg
            class="c2"
            data-cy="modeling-editor-canvas"
            height="640"
            id="modeling-editor-canvas"
            tabindex="-1"
            width="840"
          >
            <g
              style="transform-origin: top left; transform: translate(0px,0px);"
            />
          </svg>
        </div>
        <div
          style="display: flex; flex-direction: column; position: absolute; right: 0.75em; bottom: 0.75em;"
        >
          <button
            class="c3"
            style="margin-bottom: 0.5em;"
          >
            +
          </button>
          <button
            class="c3"
          >
            -
          </button>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class="c6"
        >
          <div>
            <section>
              <div
                class="c7"
              >
                <h1
                  class="c8"
                  style="flex-grow: 1;"
                >
                  Association
                </h1>
                <button
                  class="c9 c10"
                  color="link"
                >
                  <svg
                    class="c11"
                    height="16px"
                    viewBox="0 0 512 512"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M508.485 184.485l-92.485 92c-4.687 4.686-12.284 4.686-16.97 0l-7.071-7.07c-4.687-4.686-4.687-12.284 0-16.971L452.893 192H12c-6.627 0-12-5.373-12-12v-8c0-6.627 5.373-12 12-12h440.905l-60.946-60.444c-4.687-4.686-4.687-12.284 0-16.971l7.07-7.07c4.687-4.686 12.284-4.686 16.971 0l92.485 92c4.687 4.686 4.686 12.284 0 16.97zm-504.97 160l92.485 92c4.687 4.686 12.284 4.686 16.971 0l7.07-7.07c4.687-4.686 4.687-12.284 0-16.971L59.095 352H500c6.627 0 12-5.373 12-12v-8c0-6.627-5.373-12-12-12H59.107l60.934-60.444c4.687-4.686 4.687-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.687-16.97 0l-92.485 92c-4.686 4.686-4.687 12.284 0 16.97z"
                    />
                  </svg>
                </button>
                <button
                  class="c9 c10"
                  color="link"
                >
                  <svg
                    class="c11"
                    height="16px"
                    viewBox="0 0 448 512"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440 64H336l-33.6-44.8A48 48 0 0 0 264 0h-80a48 48 0 0 0-38.4 19.2L112 64H8a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h18.9l33.2 372.3a48 48 0 0 0 47.8 43.7h232.2a48 48 0 0 0 47.8-43.7L421.1 96H440a8 8 0 0 0 8-8V72a8 8 0 0 0-8-8zM171.2 38.4A16.1 16.1 0 0 1 184 32h80a16.1 16.1 0 0 1 12.8 6.4L296 64H152zm184.8 427a15.91 15.91 0 0 1-15.9 14.6H107.9A15.91 15.91 0 0 1 92 465.4L59 96h330z"
                    />
                  </svg>
                </button>
              </div>
              <hr
                class="c12"
              />
            </section>
            <section>
              <div
                class=""
              >
                <button
                  class="c9 c13 c14"
                  color="primary"
                >
                  Association (bidirectional)
                </button>
              </div>
              <hr
                class="c12"
              />
            </section>
            <section>
              <h1
                class="c15"
              />
              <div
                class="c7"
              >
                <span
                  class="c16"
                  style="margin-right: 0.5em;"
                >
                  Multiplicity
                </span>
                <input
                  class="c17 c18"
                  maxlength="100"
                  style="min-width: 0;"
                  value=""
                />
              </div>
              <div
                class="c7"
              >
                <span
                  class="c16"
                  style="margin-right: 0.5em;"
                >
                  Role
                </span>
                <input
                  class="c17 c19"
                  maxlength="100"
                  value=""
                />
              </div>
              <hr
                class="c12"
              />
            </section>
            <section>
              <h1
                class="c15"
              />
              <div
                class="c7"
              >
                <span
                  class="c16"
                  style="margin-right: 0.5em;"
                >
                  Multiplicity
                </span>
                <input
                  class="c17 c18"
                  maxlength="100"
                  style="min-width: 0;"
                  value=""
                />
              </div>
              <div
                class="c7"
              >
                <span
                  class="c16"
                  style="margin-right: 0.5em;"
                >
                  Role
                </span>
                <input
                  class="c17 c19"
                  maxlength="100"
                  value=""
                />
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
